--- a/locale/eu/LC_MESSAGES/messages.po
+++ b/locale/eu/LC_MESSAGES/messages.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-30 19:53+0000\n"
-"PO-Revision-Date: 2015-03-11 22:19+0000\n"
+"PO-Revision-Date: 2015-03-12 02:08+0000\n"
 "Last-Translator: Ibai <ibai@oihanguren.com>\n"
 "Language-Team: 89578-OEM-7332157-00211\n"
 "Language: eu\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1426112348.0\n"
+"X-POOTLE-MTIME: 1426126095.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16 public/js/lib/cancel.js:18
 msgid "Payment cancelled."
@@ -228,43 +228,43 @@ msgstr "Baimena ukatu da PINa sortzen saiatzean."
 
 #: public/js/error-codes.js:21
 msgid "The request timed out whilst attempting to create your PIN."
-msgstr ""
+msgstr "Eskaera iraungi da PINa sortzen saiatzean."
 
 #: public/js/error-codes.js:22
 msgid "An unexpected error occurred whilst checking your PIN."
-msgstr ""
+msgstr "Ustegabeko errore bat gertatu da PINa egiaztatzean."
 
 #: public/js/error-codes.js:23
 msgid "No valid user found whilst checking your PIN"
-msgstr ""
+msgstr "Ez da baliozko erabiltzailerik aurkitu PINa egiaztatzean"
 
 #: public/js/error-codes.js:24
 msgid "Permission denied attempting to check your PIN"
-msgstr ""
+msgstr "Baimena ukatu da PINa egiaztatzean"
 
 #: public/js/error-codes.js:25
 msgid "The request timed out whilst trying to check your PIN"
-msgstr ""
+msgstr "Eskaera iraungi da PINa egiaztatzean"
 
 #: public/js/error-codes.js:26
 msgid "An unexpected error occurred when resetting your PIN."
-msgstr ""
+msgstr "Ustegabeko errore bat gertatu da PINa berrezartzean."
 
 #: public/js/error-codes.js:28
 msgid "No valid user found whilst attempting to reset your PIN"
-msgstr ""
+msgstr "Ez da baliozko erabiltzailerik aurkitu PINa berrezartzean"
 
 #: public/js/error-codes.js:29
 msgid "Permission denied attempting to reset your PIN."
-msgstr ""
+msgstr "Baimena ukatu da PINa berrezartzean."
 
 #: public/js/error-codes.js:30
 msgid "The request timed out whilst attempting to reset your PIN."
-msgstr ""
+msgstr "Eskaera iraungi da PINa berrezartzean."
 
 #: public/js/error-codes.js:31
 msgid "The transaction failed. You have not been charged for this purchase."
-msgstr ""
+msgstr "Transakzioak huts egin du. Ez zaizu erosketa hau kobratu."
 
 #: public/js/error-codes.js:32
 msgid "The payment method or price point is not supported for this region or operator."
@@ -306,39 +306,40 @@ msgstr "Ordainketa burutzen"
 
 #: public/js/views/simulate.js:23
 msgid "Processing"
-msgstr ""
+msgstr "Prozesatzen"
 
 #: public/js/views/simulate.js:51
 msgid "Simulate Payment"
-msgstr ""
+msgstr "Simulatu ordainketa"
 
 #: public/js/views/simulate.js:55
 msgid "You will not be charged."
-msgstr ""
+msgstr "Ez zaizu ezer kobratuko."
 
 #: templates/reset-start.html:12 templates/reset-start.html:16
-#, fuzzy
 msgid "Reset"
-msgstr "Berrezarri PINa"
+msgstr "Berrezarri"
 
 #: templates/pin-form.html:22
 msgid "By proceeding you agree to our <a %(terms)s>terms</a> and <a %(privacy)s>Privacy Policy</a>"
 msgstr ""
+"Aurrera jarraituz, gure <a %(terms)s>baldintzak</a> eta <a %(privacy)s"
+">pribatutasun-politika</a> onartzen dituzu"
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68 public/js/views/force-auth.js:90 public/js/views/reset-start.js:70 public/js/views/force-auth.js:88 public/js/views/login.js:18
 #: public/js/views/reset-start.js:55
-#, fuzzy
 msgid "Connecting to Firefox Accounts"
-msgstr "Persona-ra konektatzen"
+msgstr "Firefox Accounts-era konektatzen"
 
 #: templates/reset-start.html:8 templates/reset-start.html:7
-#, fuzzy
 msgid "Are you sure you want to reset your PIN? You must sign in to Firefox Accounts to reset your PIN."
-msgstr "Ziur PINa berrezarri nahi duzula? Persona-rekin saioa hasi behar duzu PINa berrezartzeko."
+msgstr ""
+"Ziur PINa berrezarri nahi duzula? Firefox Accounts-en saioa hasi behar duzu "
+"PINa berrezartzeko."
 
 #: public/js/views/page.js:34
 msgid "Logging out"
-msgstr ""
+msgstr "Saioa amaitzen"
 
 #: templates/signout.html:9
 msgid "You are signed in as:"
