--- a/locale/af/LC_MESSAGES/messages.po
+++ b/locale/af/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-03-18 16:05+0000\n"
-"PO-Revision-Date: 2014-10-30 15:14+0000\n"
+"PO-Revision-Date: 2015-03-20 12:00+0000\n"
 "Last-Translator: af-ZA09_Samuel <leuce.com@gmail.com>\n"
 "Language-Team: none\n"
 "Language: af\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1414682094.0\n"
+"X-POOTLE-MTIME: 1426852813.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16 public/js/lib/cancel.js:18 public/js/views/payment-failed.js:19
 msgid "Payment cancelled."
@@ -326,58 +326,55 @@ msgstr "Deur voort te gaan, stem jy in tot ons <a %(terms)s>bepalings</a> en <a 
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68 public/js/views/force-auth.js:90 public/js/views/reset-start.js:70 public/js/views/force-auth.js:88 public/js/views/login.js:18
 #: public/js/views/reset-start.js:55
-#, fuzzy
 msgid "Connecting to Firefox Accounts"
-msgstr "Koppel tans aan die persoon"
+msgstr "Koppel tans aan Firefox Accounts"
 
 #: templates/reset-start.html:8 templates/reset-start.html:7
-#, fuzzy
 msgid "Are you sure you want to reset your PIN? You must sign in to Firefox Accounts to reset your PIN."
-msgstr "Is jy seker dat jy jou PIN wil terugstel? Jy moet by Persona aanmeld om jou PIN terug te stel."
+msgstr ""
+"Is jy seker dat jy jou PIN wil terugstel? Jy moet by Firefox Accounts "
+"aanmeld om jou PIN terug te stel."
 
 #: public/js/views/page.js:34
 msgid "Logging out"
-msgstr ""
+msgstr "Meld tans af"
 
 #: templates/signout.html:9
 msgid "You are signed in as:"
-msgstr ""
+msgstr "Jy is aangemeld as:"
 
 #: templates/signout.html:11
 msgid "Not you?"
-msgstr ""
+msgstr "Nie jy nie?"
 
 #: public/js/views/super-simulate.js:44 public/js/views/super-simulate.js:64
 msgid "Super Simulate"
-msgstr ""
+msgstr "Supersimuleer"
 
 #: templates/super-simulate.html:8
-#, fuzzy
 msgid "Simulate Something?"
-msgstr "Simuleer betaling"
+msgstr "Simuleer iets?"
 
 #: templates/super-simulate.html:11
 msgid "No network simulation"
-msgstr ""
+msgstr "Geen netwerksimulering nie"
 
 #: public/js/lib/pin-widget.js:71
 msgid "PIN too short"
-msgstr ""
+msgstr "PIN te kort"
 
 #: public/js/lib/utils.js:191
 msgid "Success"
-msgstr ""
+msgstr "Sukses"
 
 #: public/js/lib/utils.js:192
 msgid "Your purchase is complete. Close the window to continue"
-msgstr ""
+msgstr "Jou aankoop is afgehandel. Maak die venster toe om voort te gaan."
 
 #: public/js/lib/utils.js:203
-#, fuzzy
 msgid "An error occurred. Close the window to continue"
-msgstr "'n Fout het voorgekom terwyl daar probeer is om af te meld."
+msgstr "'n Fout het voorgekom. Maak die venster toe om voort te gaan."
 
 #: public/js/views/page.js:161
-#, fuzzy
 msgid "Completing Payment"
-msgstr "Betaling voltooi"
+msgstr "Voltooi tans betaling"
